templates/service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __SERVICE_NAME__
  labels:
    app.kubernetes.io/name: __SERVICE_NAME__
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: __SERVICE_NAME__
  template:
    metadata:
      labels:
        app.kubernetes.io/name: __SERVICE_NAME__
    spec:
      serviceAccountName: __SERVICE_ACCOUNT__
      containers:
        - name: __SERVICE_NAME__
          image: __IMAGE__
          ports:
            - containerPort: __PORT__
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop:
                - ALL
