templates/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __SERVICE_NAME__
  labels:
    app.kubernetes.io/name: __SERVICE_NAME__
spec:
  selector:
    app.kubernetes.io/name: __SERVICE_NAME__
  ports:
    - name: http
      port: 80
      targetPort: http
