templates/service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __SERVICE_NAME__
spec:
  ingressClassName: traefik
  rules:
    - host: __SERVICE_NAME__.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __SERVICE_NAME__
                port:
                  name: http
